# ciclo_nitrogenio

./: pyproject.toml  shell.nix
ciclo_nitrogenio/: config.py  main.py  molecule.py  terrain.py
