[tool.poetry]
name = "ciclo-nitrogenio"
version = "0.1.0"
description = ""
authors = ["redyf <mateusalvespereira7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.0"

[tool.poetry.scripts]
run = "ciclo_nitrogenio.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
